# The-Simpsons-Hit-and-Run-Android

./: .gitignore  CHEATS.md  CMakeLists.txt  CONTROLLER_CONTROLS.md  FEATURES.md  FUTURE_WORK.md  INSTALLATION.md  KNOWN_ISSUES.md  Plantilla para meter LOGI y LOGE.txt  README.md  URL repositorio oficial leleliu008(ffmpeg android).url
android-project/: build.gradle
android-project/app/: build.gradle
android-project/app/jni/src/: CMakeLists.txt
android-project/app/release/: output-metadata.json
android-project/app/releaseWithLogs/: output-metadata.json
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/c4rlox/simpsons/: SimpsonsActivity.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java  SDLInputConnection.java  SDLSurface.java
code/: CMakeLists.txt
code/cheats/: cheatinputsystem.cpp  cheatinputsystem.h  cheats.cpp  cheats.h
code/contexts/: bootupcontext.cpp
code/debug/: dbgprint.hpp
code/interiors/: interiormanager.cpp
code/main/: win32main.cpp  win32platform.cpp
code/memory/: srrmemory(modificadoAndroid).cpp  srrmemory.cpp
code/mission/: gameplaymanager.cpp
code/presentation/: language.cpp  presentation.cpp
code/presentation/fmvplayer/: fmvplayer.cpp  fmvuserinputhandler.cpp
code/presentation/gui/: guiscreen.cpp  guisystem.cpp
code/presentation/gui/bootup/: guimanagerlanguage.cpp
code/presentation/gui/frontend/: guimanagerfrontend.cpp
code/presentation/gui/ingame/: guimanageringame.cpp  guiscreenpausemission.cpp  guiscreenpauseoptions.cpp  guiscreenpausesettings.cpp
code/render/RenderManager/: RenderLayer.cpp  RenderManager.cpp  WorldRenderLayer.cpp
code/worldsim/parkedcars/: parkedcarmanager.cpp
libs/libpng/: CMakeLists.txt
libs/pure3d/: CMakeLists.txt
libs/pure3d/p3d/: loadmanager.cpp  memory.cpp  png.cpp
libs/pure3d/pddi/gl/display_win32/: gldisplay.cpp
libs/pure3d/pddi/gles/display_win32/: gldisplay.cpp
libs/radcore/: CMakeLists.txt
libs/radcore/inc/: radlinkedclass.hpp  radthread.hpp
libs/radcore/src/radcontroller/: sdlcontroller.cpp
libs/radcore/src/radfile/sdl/: sdldrive.cpp
libs/radcore/src/radmemory/: dlheap.cpp  memorymanager.cpp  memoryspacewin32.cpp  platalloc.cpp
libs/radcore/src/radthread/: thread.cpp  thread.hpp
libs/radmovie/: CMakeLists.txt  CMakeListsUltimo.txt
libs/radmovie/src/common/: ffmpegmovieplayer.cpp  ffmpegmovieplayer.hpp  ffmpegmovieplayerOriginal.cpp  ffmpegmovieplayerOriginal.hpp
libs/radscript/inc/: radnamespace.hpp
libs/radscript/src/namespace/: namespace.cpp
libs/radsound/: CMakeLists.txt
libs/radsound/src/hal/win32/: buffer.hpp  bufferloader.hpp  effect.hpp  listener.cpp  listener.hpp  radinprogext.h  radsoundwin.hpp  system.cpp  system.hpp
libs/radsound/src/pch/: pch.hpp
libs/scrooby/src/: FeParent.cpp
